[ROBOT-38] encoded an url. [ROBOT-6] supported zip/tar files. [ROBOT-40] encoded a file path.
git-svn-id: https://www.seasar.org/svn/sandbox/s2robot/trunk@136 a24fa471-b002-4554-a963-9a0eab8552e2